# edlaaf

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.bat  config.sh  readme.md  vcpkg.json
docs/: index.html
edlaaf/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  cAafEdl.cpp  cAafEdl.h  cCut.cpp  cCut.h  cDisolve.cpp  cDisolve.h  cEdl.cpp  cEdl.h  cEdlData.cpp  cEdlData.h  cEvent.cpp  cEvent.h  cLine.cpp  cLine.h  cSegment.cpp  cSegment.h  cTimeCode.cpp  cTimeCode.h  cToken.cpp  cToken.h  cTrack.cpp  cTrack.h  cUnknownPtr.h  cWipe.cpp  cWipe.h  createAaf.cpp  edlaaf.cpp  edlaaf.dsp  edlaaf.dsw  edlaaf.rc  resource.h
examples/NTSC/: 20CUTS.EDL  20DISS.EDL  20DISSPL.EDL  3CUTS.EDL  3DISS.EDL  820D.EDL  ELR4_30.EDL  EP105.EDL  EP105M2.EDL  JCSPLITS.EDL  SPLITS.EDL  m2.edl
examples/NTSC/Mortal Kombat/: 107V1.EDL  107V2.EDL
examples/NTSC/Pacific Blue/: DREWCMX.EDL
examples/NTSC/Pacific Blue/other edls on disk/: HOMEPT1.EDL  HOMEPT2.EDL  JSMPT1.EDL  JSMPT2.EDL
examples/PAL/: 20CUTS.edl  20DISS.EDL  2T20CUTS.EDL  2T20DISS.EDL  2T3CUTS.EDL  2T3DISS.EDL  3CUTS.EDL  3diss.edl  CV1FINAL.EDL  R24V3.EDL  TEST1.EDL  TEST2.EDL  TEST3.EDL  cv1_.edl  cv2.edl  cv3.edl  disswipe.edl  reel.EDL
examples/PAL/Holly Oaks/: HOLLY1.EDL  HOLLY2.EDL
examples/PAL/wine/: WINE1.EDL
